# yao

./: .gitignore  CMakeLists.txt  README.md  config.cmake  config.hpp.in
.github/workflows/: build.yml  debug.yml  debug_default_config.yml  debug_various_config.yml  release.yml  release_default_config.yml  release_various_config.yml
.legacy/v0__variadic_arguments/exe/yao/def/: CMakeLists.txt
.legacy/v0__variadic_arguments/tst/yao/req/: CMakeLists.txt  tst__yao__req__c_t_std_unique_ptr.cpp
.legacy/v1__various_type_erasure/: config.hpp.in
.ref/cpp__v0__variadic_arguments/: CMakeLists.txt  README.md
.ref/cpp__v0__variadic_arguments/tst/yao/com/: CMakeLists.txt  tst__yao__com__not_null.cpp
.ref/cpp__v0__variadic_arguments/tst/yao/prt/impl/func/: CMakeLists.txt  tst__yao__prt__impl__func__print_format____nullptr.cpp
.ref/cpp__v1__various_type_erasure/: CMakeLists.txt  info.cmake
.ref/cpp__v2__custom_comparator/: CMakeLists.txt
.ref/cpp__v3__optimized_comparison/: config.hpp.in
cmd/: build.sh  build_various_config.sh  debug.sh  debug_various_config.sh  release.sh  release_various_config.sh
exe/: CMakeLists.txt  custom_comparator.cpp  custom_comparator_1.cpp  custom_comparator_2.cpp
exe/yao/def/: CMakeLists.txt  yao__def__claim____YAO_CLAIM____true.cpp
exe/yao/lab/re/stt/: CMakeLists.txt  yao__lab__re__stt__ConcatState.cpp  yao__lab__re__stt__EpsilonState.cpp  yao__lab__re__stt__ErasedState.cpp  yao__lab__re__stt__KleeneState.cpp  yao__lab__re__stt__SymbolState.cpp  yao__lab__re__stt__UnionState.cpp  yao__lab__re__stt__VirtualState.cpp
exe/yao/lab/re/stt/impl/fobj/: CMakeLists.txt  yao__lab__re__stt__impl__fobj__ErasedState.cpp
exe/yao/lab/re/stt/impl/fptr/: CMakeLists.txt  yao__lab__re__stt__impl__fptr__ErasedState.cpp
exe/yao/lab/re/stt/impl/vfun/: CMakeLists.txt  yao__lab__re__stt__impl__vfun__ErasedState.cpp
exe/yao/prt/: CMakeLists.txt  yao__prt__osprint_type.cpp  yao__prt__osprint_value.cpp  yao__prt__osprintf.cpp  yao__prt__print_format.cpp  yao__prt__print_type.cpp  yao__prt__print_value.cpp
exe/yao/prt/impl/: CMakeLists.txt
exe/yao/prt/impl/func/: CMakeLists.txt  yao__prt__impl__func__osprintf.cpp  yao__prt__impl__func__print_format.cpp
exe/yao/prt/impl/tmpl/: CMakeLists.txt  yao__prt__impl__tmpl__osprintf.cpp  yao__prt__impl__tmpl__print_format.cpp
exe/yao/re/stt/: CMakeLists.txt  yao__re__stt__ConcatState.cpp  yao__re__stt__ConcreteVirtualState.cpp  yao__re__stt__EpsilonState.cpp  yao__re__stt__ErasedState.cpp  yao__re__stt__KleeneState.cpp  yao__re__stt__SymbolState.cpp  yao__re__stt__UnionState.cpp  yao__re__stt__UniqueState.cpp  yao__re__stt__VirtualState.cpp
exe/yao/re/stt/impl/: CMakeLists.txt
exe/yao/re/stt/impl/fobj/: CMakeLists.txt
exe/yao/re/stt/impl/fptr/: CMakeLists.txt  yao__re__stt__impl__fptr__ErasedState.cpp
exe/yao/re/stt/impl/vfun/: CMakeLists.txt  yao__re__stt__impl__vfun__ErasedState.cpp
exe/yao/re/stt/impl/virt/: CMakeLists.txt  yao__re__stt__impl__virt__ErasedState.cpp
exe/yao/re/stt/impl/vtab/: CMakeLists.txt  yao__re__stt__impl__vtab__ErasedState.cpp
tst/: CMakeLists.txt
tst/cpp/: CMakeLists.txt  tst__cpp__forwarding_reference_function_template_argument_type.cpp  tst__cpp__non_surjective_map_from_stdint_to_basic_integral_type.cpp
tst/yao/: CMakeLists.txt  tst__yao__com.cpp  tst__yao__help____not_null.cpp  tst__yao__help____owner.cpp
tst/yao/com/: CMakeLists.txt  tst__yao__com__integral.cpp  tst__yao__com__not_null.cpp
tst/yao/def/: CMakeLists.txt  tst__yao__def__check____YAO_CHECK____true.cpp  tst__yao__def__claim____YAO_CLAIM____false.cpp
tst/yao/lab/prt/: CMakeLists.txt  tst__yao__lab__prt__osprint_type.cpp  tst__yao__lab__prt__osprint_value.cpp
tst/yao/lab/re/stt/: CMakeLists.txt  tst__yao__lab__re__stt__ConcatState.cpp  tst__yao__lab__re__stt__EpsilonState.cpp  tst__yao__lab__re__stt__ErasedState.cpp  tst__yao__lab__re__stt__KleeneState.cpp  tst__yao__lab__re__stt__SymbolState.cpp  tst__yao__lab__re__stt__UnionState.cpp  tst__yao__lab__re__stt__VirtualState.cpp  tst__yao__lab__re__stt__c_r_State_with_same_Symbol.cpp  tst__yao__lab__re__stt__c_r_different_State_with_same_Symbol.cpp
tst/yao/lab/re/stt/impl/fobj/: CMakeLists.txt  tst__yao__lab__re__stt__impl__fobj__ErasedState.cpp
tst/yao/lab/re/stt/impl/fptr/: CMakeLists.txt  tst__yao__lab__re__stt__impl__fptr__ErasedState.cpp
tst/yao/lab/re/stt/impl/vfun/: CMakeLists.txt  tst__yao__lab__re__stt__impl__vfun__ErasedState.cpp
tst/yao/prt/: CMakeLists.txt  tst__yao__prt__c_f_print_type.cpp  tst__yao__prt__c_f_print_value.cpp  tst__yao__prt__c_mf_print_value.cpp  tst__yao__prt__osprint_type.cpp  tst__yao__prt__osprint_value.cpp  tst__yao__prt__osprintf.cpp  tst__yao__prt__print_format.cpp  tst__yao__prt__print_type.cpp  tst__yao__prt__print_value.cpp
tst/yao/prt/impl/func/: CMakeLists.txt  tst__yao__prt__impl__func__osprintf.cpp
tst/yao/prt/impl/tmpl/: CMakeLists.txt  tst__yao__prt__impl__tmpl__osprintf.cpp
tst/yao/re/stt/: CMakeLists.txt  tst__yao__re__stt__ConcatState.cpp  tst__yao__re__stt__ConcreteVirtualState.cpp  tst__yao__re__stt__EpsilonState.cpp  tst__yao__re__stt__ErasedState.cpp  tst__yao__re__stt__KleeneState.cpp  tst__yao__re__stt__SymbolState.cpp  tst__yao__re__stt__UnionState.cpp  tst__yao__re__stt__UniqueState.cpp  tst__yao__re__stt__VirtualState.cpp  tst__yao__re__stt__c_r_State_with_same_Symbol.cpp  tst__yao__re__stt__c_r_different_State_with_same_Symbol.cpp
tst/yao/re/stt/impl/: CMakeLists.txt
tst/yao/re/stt/impl/fobj/: CMakeLists.txt  tst__yao__re__stt__impl__fobj__ErasedState.cpp
tst/yao/re/stt/impl/fptr/: CMakeLists.txt  tst__yao__re__stt__impl__fptr__ErasedState.cpp
tst/yao/re/stt/impl/vfun/: CMakeLists.txt  tst__yao__re__stt__impl__vfun__ErasedState.cpp
tst/yao/re/stt/impl/virt/: CMakeLists.txt  tst__yao__re__stt__impl__virt__ErasedState.cpp
tst/yao/re/stt/impl/vtab/: CMakeLists.txt  tst__yao__re__stt__impl__vtab__ErasedState.cpp
tst/yao/req/: CMakeLists.txt  tst__yao__req__c_r_no_cvref.cpp  tst__yao__req__c_t_pointer.cpp  tst__yao__req__c_t_std_map.cpp  tst__yao__req__c_t_std_set.cpp
(+263 files in other folders)
