add_executable(tst__cpp__type_traits_concepts_copy_move_constructor_assignment tst__cpp__type_traits_concepts_copy_move_constructor_assignment.cpp)
target_link_libraries(tst__cpp__type_traits_concepts_copy_move_constructor_assignment yao)
add_test(tst__cpp__type_traits_concepts_copy_move_constructor_assignment tst__cpp__type_traits_concepts_copy_move_constructor_assignment)
