add_executable(tst__cpp__forwarding_reference_function_template_argument_type tst__cpp__forwarding_reference_function_template_argument_type.cpp)
add_test(tst__cpp__forwarding_reference_function_template_argument_type tst__cpp__forwarding_reference_function_template_argument_type)

add_executable(tst__cpp__type_traits_concepts_copy_move_constructor_assignment tst__cpp__type_traits_concepts_copy_move_constructor_assignment.cpp)
add_test(tst__cpp__type_traits_concepts_copy_move_constructor_assignment tst__cpp__type_traits_concepts_copy_move_constructor_assignment)
