add_executable(tst__yao__def__check____YAO_CHECK____false tst__yao__def__check____YAO_CHECK____false.cpp)
target_link_libraries(tst__yao__def__check____YAO_CHECK____false yao)
add_test(tst__yao__def__check____YAO_CHECK____false tst__yao__def__check____YAO_CHECK____false)
set_tests_properties(tst__yao__def__check____YAO_CHECK____false PROPERTIES WILL_FAIL TRUE)

add_executable(tst__yao__def__check____YAO_CHECK____true tst__yao__def__check____YAO_CHECK____true.cpp)
target_link_libraries(tst__yao__def__check____YAO_CHECK____true yao)
add_test(tst__yao__def__check____YAO_CHECK____true tst__yao__def__check____YAO_CHECK____true)

add_executable(tst__yao__def__claim____YAO_CLAIM____false tst__yao__def__claim____YAO_CLAIM____false.cpp)
target_link_libraries(tst__yao__def__claim____YAO_CLAIM____false yao)
add_test(NAME tst__yao__def__claim____YAO_CLAIM____false COMMAND cmake -E env $<TARGET_FILE:tst__yao__def__claim____YAO_CLAIM____false>)
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
  set_tests_properties(tst__yao__def__claim____YAO_CLAIM____false PROPERTIES WILL_FAIL TRUE)
endif()

add_executable(tst__yao__def__claim____YAO_CLAIM____true tst__yao__def__claim____YAO_CLAIM____true.cpp)
target_link_libraries(tst__yao__def__claim____YAO_CLAIM____true yao)
add_test(tst__yao__def__claim____YAO_CLAIM____true tst__yao__def__claim____YAO_CLAIM____true)
