add_executable(tst__yao__def__check____YAO_CHECK____false tst__yao__def__check____YAO_CHECK____false.cpp)
target_link_libraries(tst__yao__def__check____YAO_CHECK____false yao)
add_test(tst__yao__def__check____YAO_CHECK____false tst__yao__def__check____YAO_CHECK____false)
set_tests_properties(tst__yao__def__check____YAO_CHECK____false PROPERTIES WILL_FAIL TRUE)

add_executable(tst__yao__def__check____YAO_CHECK____true tst__yao__def__check____YAO_CHECK____true.cpp)
target_link_libraries(tst__yao__def__check____YAO_CHECK____true yao)
add_test(tst__yao__def__check____YAO_CHECK____true tst__yao__def__check____YAO_CHECK____true)
