add_executable(tst__yao__prt__c_f_print_type tst__yao__prt__c_f_print_type.cpp)
target_link_libraries(tst__yao__prt__c_f_print_type yao)
add_test(tst__yao__prt__c_f_print_type tst__yao__prt__c_f_print_type)

add_executable(tst__yao__prt__c_f_print_value tst__yao__prt__c_f_print_value.cpp)
target_link_libraries(tst__yao__prt__c_f_print_value yao)
add_test(tst__yao__prt__c_f_print_value tst__yao__prt__c_f_print_value)

add_executable(tst__yao__prt__c_mf_print_value tst__yao__prt__c_mf_print_value.cpp)
target_link_libraries(tst__yao__prt__c_mf_print_value yao)
add_test(tst__yao__prt__c_mf_print_value tst__yao__prt__c_mf_print_value)

add_executable(tst__yao__prt__c_smf_print_type tst__yao__prt__c_smf_print_type.cpp)
target_link_libraries(tst__yao__prt__c_smf_print_type yao)
add_test(tst__yao__prt__c_smf_print_type tst__yao__prt__c_smf_print_type)

add_executable(tst__yao__prt__print_type tst__yao__prt__print_type.cpp)
target_link_libraries(tst__yao__prt__print_type yao)
add_test(tst__yao__prt__print_type tst__yao__prt__print_type)

add_executable(tst__yao__prt__print_value tst__yao__prt__print_value.cpp)
target_link_libraries(tst__yao__prt__print_value yao)
add_test(tst__yao__prt__print_value tst__yao__prt__print_value)
