add_executable(tst__yao__re__stt__c_r_State_with_same_Symbol tst__yao__re__stt__c_r_State_with_same_Symbol.cpp)
target_link_libraries(tst__yao__re__stt__c_r_State_with_same_Symbol yao)
add_test(tst__yao__re__stt__c_r_State_with_same_Symbol tst__yao__re__stt__c_r_State_with_same_Symbol)

add_executable(tst__yao__re__stt__EpsilonState tst__yao__re__stt__EpsilonState.cpp)
target_link_libraries(tst__yao__re__stt__EpsilonState yao)
add_test(tst__yao__re__stt__EpsilonState tst__yao__re__stt__EpsilonState)

add_executable(tst__yao__re__stt__KleeneState tst__yao__re__stt__KleeneState.cpp)
target_link_libraries(tst__yao__re__stt__KleeneState yao)
add_test(tst__yao__re__stt__KleeneState tst__yao__re__stt__KleeneState)

add_executable(tst__yao__re__stt__SymbolState tst__yao__re__stt__SymbolState.cpp)
target_link_libraries(tst__yao__re__stt__SymbolState yao)
add_test(tst__yao__re__stt__SymbolState tst__yao__re__stt__SymbolState)

add_executable(tst__yao__re__stt__UnionState tst__yao__re__stt__UnionState.cpp)
target_link_libraries(tst__yao__re__stt__UnionState yao)
add_test(tst__yao__re__stt__UnionState tst__yao__re__stt__UnionState)
