add_executable(tst__yao__req__c_t_pointer tst__yao__req__c_t_pointer.cpp)
target_link_libraries(tst__yao__req__c_t_pointer yao)
add_test(tst__yao__req__c_t_pointer tst__yao__req__c_t_pointer)

add_executable(tst__yao__req__c_t_std_shared_ptr tst__yao__req__c_t_std_shared_ptr.cpp)
target_link_libraries(tst__yao__req__c_t_std_shared_ptr yao)
add_test(tst__yao__req__c_t_std_shared_ptr tst__yao__req__c_t_std_shared_ptr)

add_executable(tst__yao__req__c_t_std_unique_ptr tst__yao__req__c_t_std_unique_ptr.cpp)
target_link_libraries(tst__yao__req__c_t_std_unique_ptr yao)
add_test(tst__yao__req__c_t_std_unique_ptr tst__yao__req__c_t_std_unique_ptr)
